# sovereign-edge

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  Taskfile.yml  docker-compose.jetson.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agents/career/: pyproject.toml
agents/career/src/career/: __init__.py  expert.py  squad.py  subgraph.py
agents/career/tests/: test_scraper.py
agents/creative/: pyproject.toml
agents/creative/src/creative/: __init__.py  expert.py  squad.py  subgraph.py
agents/creative/tests/: test_squad.py
agents/director/: pyproject.toml
agents/director/src/director/: graph.py
agents/goals/: pyproject.toml
agents/goals/src/goals/: store.py  subgraph.py
agents/goals/tests/: test_goals.py
agents/intelligence/: pyproject.toml
agents/intelligence/src/intelligence/: __init__.py  earnings.py  expert.py  squad.py  subgraph.py
agents/intelligence/tests/: test_arxiv.py  test_earnings.py  test_market.py
agents/orchestrator/: pyproject.toml
agents/orchestrator/src/orchestrator/: main.py
agents/orchestrator/tests/: test_graph.py
agents/spiritual/: pyproject.toml
agents/spiritual/src/spiritual/: __init__.py  expert.py  squad.py  subgraph.py
agents/spiritual/tests/: test_squad.py
docs/: GENERALIZATION_ROADMAP.md  architecture.md  configuration.md  deployment.md  development.md  experts.md  troubleshooting.md
evals/: test_brief_quality.py
evals/datasets/career/: career_eval.jsonl
evals/datasets/creative/: creative_eval.jsonl
evals/datasets/intelligence/: intelligence_eval.jsonl
evals/datasets/router/: router_eval.jsonl
evals/datasets/spiritual/: spiritual_eval.jsonl
evals/judges/: router_judge.py  squad_judge.py
evals/results/: eval_20260403_180112.json  eval_20260403_180148.json
prompts/: CHANGELOG.md
prompts/career/: v1.0.0.yaml
prompts/creative/: v1.0.0.yaml
prompts/goals/: v1.0.0.yaml
prompts/intelligence/: v1.0.0.yaml
prompts/spiritual/: v1.0.0.yaml
scripts/: generate-synth-data.py  ingest-stepbible.py  train-router.py
secrets/: env.example.yaml
services/discord/: pyproject.toml
services/discord/src/discord_bot/: bot.py
services/health/: pyproject.toml
services/health/src/health/: dashboard.py  server.py
services/mcp/: pyproject.toml
services/mcp/src/mcp_server/: server.py
services/mcp/tests/: test_mcp_server.py
services/telegram/: pyproject.toml
services/telegram/src/telegram_bot/: bot.py
services/voice/: pyproject.toml
services/voice/src/voice/: __init__.py  __main__.py  pipeline.py  stt.py  tts.py  wake.py
services/whatsapp/: pyproject.toml
services/whatsapp/src/whatsapp/: bot.py
systemd/: ai-stack.target  telegram-bot.service  voice.service
tests/: conftest.py  test_gateway.py  test_router.py  test_search.py  test_types.py
