[project]
name = "sovereign-edge"
version = "0.1.0"
description = "Sovereign Edge Personal Intelligence System"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "omnipotence-eth", email = ""}]

[tool.uv.workspace]
members = [
    "packages/*",
    "agents/*",
    "services/*",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages", "agents", "services"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "S",    # bandit security
    "B",    # bugbear
    "UP",   # pyupgrade
    "ANN",  # annotations
    "RUF",  # ruff-specific
]
ignore = [
    "ANN101",  # missing self type
    "ANN102",  # missing cls type
    "S101",    # assert used (OK in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]
"evals/**" = ["S101", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "evals"]
