[project]
name = "sovereign-edge"
version = "0.4.0"
description = "Sovereign Edge Personal Intelligence System"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Tremayne Timms", email = "t-timms@users.noreply.github.com"}]

[tool.uv.workspace]
members = [
    "packages/*",
    "agents/*",
    "services/*",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10,<1.0",
    "pytest-cov>=7.1.0,<8.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "pre-commit>=4.5.1,<5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages", "agents", "services"]
exclude = ["unsloth_compiled_cache"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "S",    # bandit security
    "B",    # bugbear
    "UP",   # pyupgrade
    "ANN",  # annotations
    "RUF",  # ruff-specific
]
ignore = [
    "S101",    # assert used (OK in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "S105"]
"evals/**" = ["S101", "ANN"]
"**/tests/**" = ["S101", "ANN", "S105"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "evals", "agents", "packages", "services"]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "evals"]
