[project]
name = "sovereign-edge-career"
version = "0.3.10"
requires-python = ">=3.11"
dependencies = [
    "sovereign-edge-core",
    "sovereign-edge-llm",
    "sovereign-edge-memory",
    "sovereign-edge-observability",
    "sovereign-edge-search",
    "langgraph>=1.0,<2.0",
]

[tool.uv.sources]
sovereign-edge-core = { workspace = true }
sovereign-edge-llm = { workspace = true }
sovereign-edge-memory = { workspace = true }
sovereign-edge-observability = { workspace = true }
sovereign-edge-search = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/career"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
