[project]
name = "sovereign-edge-director"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "sovereign-edge-core",
    "sovereign-edge-llm",
    "sovereign-edge-memory",
    "sovereign-edge-observability",
    "langgraph>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
]

[tool.uv.sources]
sovereign-edge-core = { workspace = true }
sovereign-edge-llm = { workspace = true }
sovereign-edge-memory = { workspace = true }
sovereign-edge-observability = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/director"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
