[project]
name = "sovereign-edge-discord"
version = "0.3.7"
requires-python = ">=3.11"
dependencies = [
    "sovereign-edge-core",
    "sovereign-edge-llm",
    "sovereign-edge-memory",
    "sovereign-edge-observability",
    "sovereign-edge-router",
    "discord.py>=2.3,<3.0",
]

[tool.uv.sources]
sovereign-edge-core = { workspace = true }
sovereign-edge-llm = { workspace = true }
sovereign-edge-memory = { workspace = true }
sovereign-edge-observability = { workspace = true }
sovereign-edge-router = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/discord_bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
