[project]
name = "sovereign-edge-mcp"
version = "0.3.6"
description = "MCP server exposing Sovereign Edge experts as Claude Desktop tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0,<2.0",
    "sovereign-edge-core",
    "sovereign-edge-observability",
    "sovereign-edge-orchestrator",
    "sovereign-edge-router",
    "sovereign-edge-memory",
]

[tool.uv.sources]
sovereign-edge-core = { workspace = true }
sovereign-edge-observability = { workspace = true }
sovereign-edge-orchestrator = { workspace = true }
sovereign-edge-router = { workspace = true }
sovereign-edge-memory = { workspace = true }

[project.scripts]
sovereign-edge-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
