[project]
name = "sovereign-edge-voice"
version = "0.3.6"
requires-python = ">=3.11"
dependencies = [
    "sovereign-edge-core",
    "sovereign-edge-llm",
    "sovereign-edge-observability",
    "sovereign-edge-orchestrator",
    "sovereign-edge-router",
    "numpy>=1.26,<2.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
# pip install sovereign-edge-voice[tts] — Kokoro TTS + playback
tts = [
    "kokoro>=0.9,<2.0",
    "sounddevice>=0.4,<1.0",
    "scipy>=1.11,<2.0",
    "piper-tts>=1.2,<2.0",
]
# pip install sovereign-edge-voice[stt] — faster-whisper STT
stt = [
    "faster-whisper>=1.0,<2.0",
    "sounddevice>=0.4,<1.0",
    "scipy>=1.11,<2.0",
]
# pip install sovereign-edge-voice[full] — everything
full = [
    "kokoro>=0.9,<2.0",
    "sounddevice>=0.4,<1.0",
    "scipy>=1.11,<2.0",
    "piper-tts>=1.2,<2.0",
    "faster-whisper>=1.0,<2.0",
    "openwakeword>=0.6,<1.0",
]

[tool.uv.sources]
sovereign-edge-core = { workspace = true }
sovereign-edge-llm = { workspace = true }
sovereign-edge-observability = { workspace = true }
sovereign-edge-orchestrator = { workspace = true }
sovereign-edge-router = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice"]
