[project]
name = "sovereign-edge-whatsapp"
version = "0.3.6"
description = "WhatsApp integration for Sovereign Edge via Twilio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "twilio>=9.0,<10.0",
    "httpx>=0.27,<1.0",
    "sovereign-edge-core",
    "sovereign-edge-observability",
    "sovereign-edge-orchestrator",
    "sovereign-edge-router",
]

[tool.uv.sources]
sovereign-edge-core = { workspace = true }
sovereign-edge-observability = { workspace = true }
sovereign-edge-orchestrator = { workspace = true }
sovereign-edge-router = { workspace = true }

[project.scripts]
whatsapp-bot = "whatsapp.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatsapp"]
